trunk/app/webroot/css/style.css
/*
style.css for ATiM2

	written by:
	* julian at visuallizard dot com
	* ross at visuallizard dot com
	* wil at visuallizard dot com 
	
	(c) 2009  - visuallizard.com and CTRNET
*/


/* reset everyting so we can proceed as needed */
/* http://meyerweb.com/eric/tools/css/reset/ */
/* v1.0 | 20080212 */

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, font, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td {
	margin: 0;
	padding: 0;
	border: 0;
	outline: 0;
	font-size: 100%;
	vertical-align: baseline;
	background: transparent;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}

/* remember to define focus styles! */
:focus {
	outline: 0;
}

.right { text-align: right; }
.left { text-align: left; }

/* remember to highlight inserts somehow! */
ins {
	text-decoration: none;
}
del {
	text-decoration: line-through;
}

/* tables still need 'cellspacing="0"' in the markup */
table {
	border-collapse: collapse;
	border-spacing: 0;
}



/* -= body and general styles =- */
body {
	margin: 0;
	padding: 0;
	background-color: #f2f2ff;
	font: 11px/1.2em "Lucida Grande", Futura, Helvetica, Arial, Verdana, sans-serif;
}
div#wrapper {
	clear: both;
	margin: 0 10px 10px 10px;
	padding: 0.25em 1em;
	background-color: #fff;
	border: 1px solid #ccf;
}

div#header {
	position: relative;
	
	margin: 0 0 10px 0;
	padding: 5px 10px 0 10px;
	border: 0;
	
	border-bottom: 1px solid #000;
	background: #243340 url(../img/body_bk_02.png) bottom left repeat-x;
	color: #fff;
}

div#header h1 {
	width: 725px; 
	height: 64px;
	padding: 16px 0 0 225px;
	margin: 0;
	font-size: 26px;
	background: url(../img/header_bk_new_01.png) bottom left no-repeat;
	
}
	


div#wrapper {
	background: none;
	border: 0;
	padding: 0;
	min-height: 300px;
}
	div#wrapper div {
		margin: 0;
		padding: 0;
		border: 0;
	}

p {
	margin: 1em 0;
}

form,
fieldset {
	margin: 0;
	padding: 0;
	border: 0;
}
div#wrapper fieldset {
	display: block;
}
a { 
	color: #5081a5; 
}
.not_allowed {
	text-decoration: line-through;
	cursor: not-allowed;
}

.required {
	background-color: #ffc;
}

.readonly {
	background-color: #f3f3f9;
	color: #889;
}

.error {
	background-color: #fcc;
}

.hidden {
	display: none;
}


/* actions, links */
div#wrapper div.actions {
	position: relative;
	z-index: 0;
	list-style: none;
	background: #dde8f2;
	display: block;
	height: 25px;
	padding: 10px 0 10px 20px;
	margin: 0;
	border: 1px solid #243340;
	border-color: #243340;
	border-top: none;
	-moz-border-radius-bottomleft: 5px; -webkit-border-bottom-left-radius: 5px;
	-moz-border-radius-bottomright: 5px; -webkit-border-bottom-right-radius: 5px;	
	font-size: 11px;
	line-height: 1.3em;
	color: #bbf;
}
	div#wrapper div.actions ul {
		float: right;
		margin: 0;
		padding: 0;
		list-style-type: none;
	}	
	div#wrapper div.actions li {
		position: relative;
		float: left;
		padding: 0 10px 0 0;
	}
	div#wrapper div.actions div {
		background: url(../img/btnBack.png);
		-moz-border-radius: 5px; -webkit-border-radius: 5px;
		border-color: #999999;
		border-style: solid;
		border-width: 1px;
		margin-left: 5px;
		margin-right: 5px;
		margin-bottom: 5px;
		display: inline-block;
	}
	
	
	div#wrapper div.actions div a {
		/* font-weight: bold; */
		font-size: 12px;
		/* text-transform: uppercase; */
		text-decoration: none;
		background-position: 8px center;
		/*background-color: #c1d7e9;*/
		padding: 5px 10px 4px 27px;
		color: #000;
		
		-moz-border-radius: 3px; -webkit-border-radius: 3px;
		
	}
	div#wrapper div.actions div:hover {
		border-color: #000;
		background-image: url("../img/btnBackSel.png");
	}
	
	div#wrapper div.actions ul li.at a,
	div#wrapper div.actions div a:hover{
		color: #000;
	}
	
	div#wrapper div.actions a.not_allowed {
		color: #aad;
	}
	div#wrapper div.actions a.search_results {
		background-position: 7px center;
		padding: 5px 10px 5px 25px;
	}
	
	div#wrapper div.actions ul ul.filter {
		margin: 0;
		float: right;
		line-height: 25px;
		position: relative;
		top: 0;
		right: 0;
		text-align: right;
	}
	div#wrapper div.actions ul ul.filter li {
		background: none;
		padding: 0;
		margin: 0;
		z-index: 10;
		position: relative;
	}
	div#wrapper div.actions ul ul.filter li a.form.popup {
		z-index: 5000;
	}
	
	
/*===========================================================*
	-= popup filter menu 
*===========================================================*/
	div#wrapper div.actions ul ul.filter li div.filter_menu {
		display: none;
	}
	
	div#wrapper div.actions ul ul.filter:hover a {
		/*background-color: #486680;
		color: #fff;*/
	}

/*
	div#wrapper div.actions ul ul.filter li:hover div.filter_menu {
		display: block;
		width: 200px;
		top: -270px;
		right: 45px;
		height: 275px;
		overflow: hidden;
		line-height: 14px;
		position: absolute;
		background: #486680;
		margin: 0;
		text-align: left;
		border-color: #000000;
		-moz-border-radius: 5px; -webkit-border-radius: 5px;
	}
*/
	div#wrapper div.actions ul ul.filter li:hover div.filter_menu {
		display: block;
		width: 200px;
		top: 5px;
		right: 55px;
		/* height: 275px; no scrollable menu */
		overflow: hidden;
		line-height: 14px;
		position: absolute;
		background: #486680;
		margin: 0;
		text-align: left;
		border-color: #000000;
		-moz-border-radius: 5px; -webkit-border-radius: 5px;
	}
	div#wrapper div.actions ul ul.filter li:hover span,
	div#wrapper div.actions ul ul.filter li:hover span a {
		color: #fff;
	}
	div#wrapper div.actions ul ul.filter div.filter_menu ul {
		/* padding: 30px 0; */
		padding: 0;
	}
/* ... */

